[package]
name = "livepeer-rs"
version = "0.0.2"
edition = "2021"
description = "Livepeer Studio API client"
license = "MIT"
repository = "https://github.com/gioelecerati/livepeer-rs"
readme = "README.md"
exclude = [
    ".cargo_vcs_info.json" 
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
surf = "2.3.2"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
colored = "2.0.0"
ffmpeg-next = "5.0.3"
rand = "0.8.3"